new button added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello !</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quod, quae temporibus ad cupiditate voluptas commodi explicabo molestiae sint, et eveniet officiis aut? Accusantium, esse obcaecati mollitia magnam delectus reprehenderit?</p>
+    <button>Click me</button>
 </body>
 </html>
